@@ -1,3 +1,8 @@
+Wed Sep 13 06:09:40 BST 2006  Olly Betts <olly@survex.com>
+
+	* backends/flint/flint_version.cc,backends/flint/flint_version.h:
+	  Actually commit the new files!
+
 Wed Sep 13 05:21:04 BST 2006  Olly Betts <olly@survex.com>
 
 	* backends/flint/,common/utils.h: Rewrite some of flint's low level IO
